// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Reports Screen Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
          <span
            className="MuiTouchRipple-root muirtl-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          className="title infoTitle"
        >
          דוחות 🛠️
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="reportFields"
      >
        <div
          className="fields"
        >
          <div
            className="MuiFormControl-root muirtl-1nrlq1o-MuiFormControl-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled label muirtl-15jt06t-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={true}
              id="hospital_label"
            >
              בית חולים
            </label>
            <div
              className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl field muirtl-1tv324o-MuiInputBase-root-MuiInput-root-MuiSelect-root"
              onClick={[Function]}
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="hospital_label hospital_select"
                className="MuiSelect-select MuiSelect-standard MuiInput-input MuiInputBase-input muirtl-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                id="hospital_select"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="button"
                tabIndex={0}
              >
                בחר
              </div>
              <input
                aria-hidden={true}
                className="MuiSelect-nativeInput muirtl-yf8vq0-MuiSelect-nativeInput"
                disabled={false}
                onAnimationStart={[Function]}
                onChange={[Function]}
                required={false}
                tabIndex={-1}
                value="בחר"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard muirtl-1epiaji-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            className="MuiFormControl-root MuiTextField-root muirtl-1u3bzj6-MuiFormControl-root-MuiTextField-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary muirtl-1bmusge-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={false}
              htmlFor="mui-59"
              id="mui-59-label"
            >
              החל מתאריך
            </label>
            <div
              className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl muirtl-1ydara-MuiInputBase-root-MuiOutlinedInput-root"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                aria-label="Choose date, selected date is Jan 1, 2022"
                aria-readonly={true}
                autoFocus={false}
                className="MuiOutlinedInput-input MuiInputBase-input muirtl-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="mui-59"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                required={false}
                type="text"
                value="01/01/2022"
              />
              <fieldset
                aria-hidden={true}
                className="MuiOutlinedInput-notchedOutline muirtl-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="muirtl-1ftyaf0"
                >
                  <span>
                    החל מתאריך
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            className="MuiFormControl-root MuiTextField-root muirtl-1u3bzj6-MuiFormControl-root-MuiTextField-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary muirtl-1bmusge-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={false}
              htmlFor="mui-61"
              id="mui-61-label"
            >
              עד תאריך
            </label>
            <div
              className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl muirtl-1ydara-MuiInputBase-root-MuiOutlinedInput-root"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                aria-label="Choose date, selected date is Jan 29, 2022"
                aria-readonly={true}
                autoFocus={false}
                className="MuiOutlinedInput-input MuiInputBase-input muirtl-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="mui-61"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                required={false}
                type="text"
                value="01/29/2022"
              />
              <fieldset
                aria-hidden={true}
                className="MuiOutlinedInput-notchedOutline muirtl-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="muirtl-1ftyaf0"
                >
                  <span>
                    עד תאריך
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          className="buttons"
        >
          <div
            className="field"
          >
            <button
              className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button disabledButton muirtl-1j41ro6-MuiButtonBase-root-MuiButton-root"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            >
              <div
                className="buttonText"
              >
                חיפוש
              </div>
            </button>
          </div>
          <div
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="field"
            >
              <button
                className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root button primaryButton muirtl-1j41ro6-MuiButtonBase-root-MuiButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="buttonText"
                >
                  ייצוא קובץ לאקסל
                </div>
                <span
                  className="MuiTouchRipple-root muirtl-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <table
        className="MuiTable-root muirtl-x4ozvp-MuiTable-root"
        role={null}
      >
        <thead
          className="MuiTableHead-root muirtl-15wwp11-MuiTableHead-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head muirtl-1eorl2v-MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              תאריך
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שעה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              סוג דם
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              סטאטוס
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root muirtl-apqrd9-MuiTableBody-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root muirtl-1eorl2v-MuiTableRow-root"
            data-appointment-id="appointmentId1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              12/01/2022
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              14:00
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              אברהם
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              כהן
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              <a
                href="tel:0525256631"
              >
                0525256631
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              A+
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              אין מידע
            </td>
          </tr>
          <tr
            className="MuiTableRow-root muirtl-1eorl2v-MuiTableRow-root"
            data-appointment-id="appointmentId2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              12/01/2022
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              15:00
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              אברהם
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              לוי
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              <a
                href="tel:0525256221"
              >
                0525256221
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              AB+
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              הושלם
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Reports Screen Loading 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
          <span
            className="MuiTouchRipple-root muirtl-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          className="title infoTitle"
        >
          דוחות 🛠️
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="reportFields"
      >
        <div
          className="fields"
        >
          <div
            className="MuiFormControl-root muirtl-1nrlq1o-MuiFormControl-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled label muirtl-15jt06t-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={true}
              id="hospital_label"
            >
              בית חולים
            </label>
            <div
              className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl field muirtl-1tv324o-MuiInputBase-root-MuiInput-root-MuiSelect-root"
              onClick={[Function]}
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="hospital_label hospital_select"
                className="MuiSelect-select MuiSelect-standard MuiInput-input MuiInputBase-input muirtl-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                id="hospital_select"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="button"
                tabIndex={0}
              >
                בחר
              </div>
              <input
                aria-hidden={true}
                className="MuiSelect-nativeInput muirtl-yf8vq0-MuiSelect-nativeInput"
                disabled={false}
                onAnimationStart={[Function]}
                onChange={[Function]}
                required={false}
                tabIndex={-1}
                value="בחר"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard muirtl-1epiaji-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            className="MuiFormControl-root MuiTextField-root muirtl-1u3bzj6-MuiFormControl-root-MuiTextField-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary muirtl-1bmusge-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={false}
              htmlFor="mui-63"
              id="mui-63-label"
            >
              החל מתאריך
            </label>
            <div
              className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl muirtl-1ydara-MuiInputBase-root-MuiOutlinedInput-root"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                aria-label="Choose date, selected date is Jan 1, 2022"
                aria-readonly={true}
                autoFocus={false}
                className="MuiOutlinedInput-input MuiInputBase-input muirtl-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="mui-63"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                required={false}
                type="text"
                value="01/01/2022"
              />
              <fieldset
                aria-hidden={true}
                className="MuiOutlinedInput-notchedOutline muirtl-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="muirtl-1ftyaf0"
                >
                  <span>
                    החל מתאריך
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            className="MuiFormControl-root MuiTextField-root muirtl-1u3bzj6-MuiFormControl-root-MuiTextField-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary muirtl-1bmusge-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={false}
              htmlFor="mui-65"
              id="mui-65-label"
            >
              עד תאריך
            </label>
            <div
              className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl muirtl-1ydara-MuiInputBase-root-MuiOutlinedInput-root"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                aria-label="Choose date, selected date is Jan 29, 2022"
                aria-readonly={true}
                autoFocus={false}
                className="MuiOutlinedInput-input MuiInputBase-input muirtl-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="mui-65"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                required={false}
                type="text"
                value="01/29/2022"
              />
              <fieldset
                aria-hidden={true}
                className="MuiOutlinedInput-notchedOutline muirtl-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="muirtl-1ftyaf0"
                >
                  <span>
                    עד תאריך
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          className="buttons"
        >
          <div
            className="field"
          >
            <button
              className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button disabledButton muirtl-1j41ro6-MuiButtonBase-root-MuiButton-root"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            >
              <div
                className="buttonText"
              >
                חיפוש
              </div>
            </button>
          </div>
          <div
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="field"
            >
              <button
                className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button disabledButton muirtl-1j41ro6-MuiButtonBase-root-MuiButton-root"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={-1}
                type="button"
              >
                <div
                  className="buttonText"
                >
                  ייצוא קובץ לאקסל
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <table
        className="MuiTable-root muirtl-x4ozvp-MuiTable-root"
        role={null}
      >
        <thead
          className="MuiTableHead-root muirtl-15wwp11-MuiTableHead-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head muirtl-1eorl2v-MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              תאריך
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שעה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              סוג דם
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              סטאטוס
            </th>
          </tr>
        </thead>
      </table>
      <div
        className="spinner"
      >
        <span
          className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary muirtl-1ep2p63-MuiCircularProgress-root"
          role="progressbar"
          style={
            Object {
              "height": "3rem",
              "width": "3rem",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg muirtl-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate muirtl-176wh8e-MuiCircularProgress-circle"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Reports Screen Only One Hospital 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
          <span
            className="MuiTouchRipple-root muirtl-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          className="title infoTitle"
        >
          דוחות 🛠️
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="reportFields"
      >
        <div
          className="fields"
        >
          <div
            className="MuiFormControl-root muirtl-1nrlq1o-MuiFormControl-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled label muirtl-15jt06t-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={true}
              id="hospital_label"
            >
              בית חולים
            </label>
            <div
              className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl field muirtl-1tv324o-MuiInputBase-root-MuiInput-root-MuiSelect-root"
              onClick={[Function]}
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="hospital_label hospital_select"
                className="MuiSelect-select MuiSelect-standard MuiInput-input MuiInputBase-input muirtl-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                id="hospital_select"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="button"
                tabIndex={0}
              >
                אסף הרופא
              </div>
              <input
                aria-hidden={true}
                className="MuiSelect-nativeInput muirtl-yf8vq0-MuiSelect-nativeInput"
                disabled={false}
                onAnimationStart={[Function]}
                onChange={[Function]}
                required={false}
                tabIndex={-1}
                value="ASAF_HAROFE"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard muirtl-1epiaji-MuiSvgIcon-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <div
            className="MuiFormControl-root MuiTextField-root muirtl-1u3bzj6-MuiFormControl-root-MuiTextField-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary muirtl-1bmusge-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={false}
              htmlFor="mui-67"
              id="mui-67-label"
            >
              החל מתאריך
            </label>
            <div
              className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl muirtl-1ydara-MuiInputBase-root-MuiOutlinedInput-root"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                aria-label="Choose date, selected date is Jan 1, 2022"
                aria-readonly={true}
                autoFocus={false}
                className="MuiOutlinedInput-input MuiInputBase-input muirtl-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="mui-67"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                required={false}
                type="text"
                value="01/01/2022"
              />
              <fieldset
                aria-hidden={true}
                className="MuiOutlinedInput-notchedOutline muirtl-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="muirtl-1ftyaf0"
                >
                  <span>
                    החל מתאריך
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            className="MuiFormControl-root MuiTextField-root muirtl-1u3bzj6-MuiFormControl-root-MuiTextField-root"
          >
            <label
              className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary muirtl-1bmusge-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink={false}
              htmlFor="mui-69"
              id="mui-69-label"
            >
              עד תאריך
            </label>
            <div
              className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl muirtl-1ydara-MuiInputBase-root-MuiOutlinedInput-root"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                aria-label="Choose date, selected date is Jan 29, 2022"
                aria-readonly={true}
                autoFocus={false}
                className="MuiOutlinedInput-input MuiInputBase-input muirtl-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id="mui-69"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={true}
                required={false}
                type="text"
                value="01/29/2022"
              />
              <fieldset
                aria-hidden={true}
                className="MuiOutlinedInput-notchedOutline muirtl-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="muirtl-1ftyaf0"
                >
                  <span>
                    עד תאריך
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          className="buttons"
        >
          <div
            className="field"
          >
            <button
              className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root button primaryButton muirtl-1j41ro6-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <div
                className="buttonText"
              >
                חיפוש
              </div>
              <span
                className="MuiTouchRipple-root muirtl-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="field"
            >
              <button
                className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root button primaryButton muirtl-1j41ro6-MuiButtonBase-root-MuiButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="buttonText"
                >
                  ייצוא קובץ לאקסל
                </div>
                <span
                  className="MuiTouchRipple-root muirtl-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <table
        className="MuiTable-root muirtl-x4ozvp-MuiTable-root"
        role={null}
      >
        <thead
          className="MuiTableHead-root muirtl-15wwp11-MuiTableHead-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head muirtl-1eorl2v-MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              תאריך
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שעה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              סוג דם
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium muirtl-1w3enqz-MuiTableCell-root"
              scope="col"
            >
              סטאטוס
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root muirtl-apqrd9-MuiTableBody-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root muirtl-1eorl2v-MuiTableRow-root"
            data-appointment-id="appointmentId1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              12/01/2022
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              14:00
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              אברהם
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              כהן
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              <a
                href="tel:0525256631"
              >
                0525256631
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              A+
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              אין מידע
            </td>
          </tr>
          <tr
            className="MuiTableRow-root muirtl-1eorl2v-MuiTableRow-root"
            data-appointment-id="appointmentId2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              12/01/2022
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              15:00
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              אברהם
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              לוי
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              <a
                href="tel:0525256221"
              >
                0525256221
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              AB+
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium muirtl-xso64x-MuiTableCell-root"
            >
              הושלם
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
